--- a/static/css/global.css
+++ b/static/css/global.css
@@ -2,7 +2,7 @@
 @import url('/static/css/iconfont/iconfont.css');
 @font-face {
   font-family: newfont;
-  src: url("IndieFlower.ttf") /* TTF file for CSS3 browsers */
+  src: url("lettergothicstd.ttf") /* TTF file for CSS3 browsers */
 }
 *{
   font-family: newfont;
@@ -11,7 +11,7 @@
 
 /* CSS重置 */
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0;}
-body{ font-size:12px;text-shadow: 1px 1px 2px rgba(127,127,127,0.1); line-height:24px; font-family:newfont,Tahoma, Arial, SimSun, "宋体", "Microsoft YaHei", "微软雅黑", SimHei, "黑体"; background:#fff; color:#333; -webkit-text-size-adjust:100%;min-width: 1280px;}
+body{ font-size:12px;text-shadow: 1px 1px 2px rgba(127,127,127,0.1); line-height:24px; font-family:newfont,"Microsoft YaHei","微软雅黑",Tahoma, Arial, SimSun, "宋体" , SimHei, "黑体"; background:#fff; color:#333; -webkit-text-size-adjust:100%;min-width: 1280px;}
 table { border-collapse:collapse; border-spacing:0;}
 fieldset,img { border:0;}
 address,caption,cite,code,dfn,em,strong,th,var,optgroup { font-style:normal; font-weight: normal;}
